--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "svg-inline-loader": "^0.8.2",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "date-fns": "^3.3.1"
   }
 }
